--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
   <title>Document</title>
 </head>
 <body>
-  <input type="text" name="" id="textBox" class="textBox">
+  <button type="button" id="rock" value="rock">Rock</button>
+  <button type="button" id="paper" value="paper">Paper</button>
+  <button type="button" id="scissors" value="scissors">Scissors</button>
 
+  <div>
+    <p id="result">
+
+    </p>
+  </div>
+  <div>
+    <p>PC Score:</p>
+    <p id="counterPC"></p>
+  </div>
+  <div>
+    <p>Your Score:</p>
+    <p id="counterHuman"></p>
+  </div>
+  <div>
+    <p id="winner"></p>
+  </div>
 <script src="main.js"></script>
 
 </body>
